<resources>
    <string name="app_name">Panna</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="football_fantasy">Football Fantasy</string>
    <string name="sign_in">Sign-In</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="code">Code</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="password_description">Your password must not be lesser than 6 characters</string>
    <string name="retype_password">Re-type password</string>
    <string name="register_condition" formatted="false"><![CDATA[I have read and agreed to the <a href="%s"><font color="#3b3fc2"><b>Term</b></font></a> and <a href="%s"><font color="#3b3fc2"><b>Privacy policy</b></font></a>]]></string>
    <string name="sign_with">Or sign-in with</string>
    <string name="forgot_description">Enter your email. We’ll send email instructions on how to reset your password.</string>
    <string name="forgot_description_success">We have just sent a verification link to your email. Please, check your inbox and click into the link to activate your account. If you cannot find any verification email, try to find in spam mails or resend a new email.</string>
    <string name="recover_password">Recover Password</string>
    <string name="send">Send</string>
    <string name="forgot_success">Recover password sent.</string>
    <string name="resend">RE-SEND</string>
    <string name="home">Home</string>
    <string name="leagueResponses">Leagues</string>
    <string name="match_up">Match up</string>
    <string name="notification">Notification</string>
    <string name="more">More</string>
    <string name="information">Information</string>
    <string name="my_leagues">My Leagues</string>
    <string name="newsResponses">News</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="football_leagues">Football League</string>
    <string name="football_leagues_break">Football\nLeague</string>
    <string name="player_list_break">Player\nList</string>
    <string name="rank">Rank</string>
    <string name="open_leagues">Open Leagues</string>
    <string name="real_league">Real League</string>
    <string name="my_league">My League</string>
    <string name="pending_invitation">Pending Invitations</string>
    <string name="search_public_leagues">Search public league</string>
    <string name="search_public_players">Search player by name</string>
    <string name="search_players">Search players</string>
    <string name="search_friends">Search</string>
    <string name="owner">Owner</string>
    <string name="invitor">Invitor</string>
    <string name="entrants">Entrants</string>
    <string name="create_new_league">Create a new league</string>
    <string name="league_name_logo">League name &amp; logo</string>
    <string name="enter_league_name">Enter league name</string>
    <string name="enter_team_name">Enter team name</string>
    <string name="league_type">League type</string>
    <string name="open_league">Open league</string>
    <string name="private_league">Private league</string>
    <string name="game_play_options">Gameplay option</string>
    <string name="transfer">Transfer</string>
    <string name="draft">Draft</string>
    <string name="waving">Waiving</string>
    <string name="number_of_users">Number of users</string>
    <string name="trade_review_setting">Trade review setting</string>
    <string name="no_trade_review">No trade review</string>
    <string name="trade_review_by_league_creator">Trade review by league creator</string>
    <string name="trade_review_by_league_members">Trade review by league members</string>
    <string name="scoring_system">Scoring system</string>
    <string name="regular_football_point">Regular football point(3,1,0)</string>
    <string name="point_per_stats">Points per stats</string>
    <string name="draft_time">Draft time</string>
    <string name="time_per_draft_pick">Time per draft pick</string>
    <string name="start_time">Start time</string>
    <string name="setup_time">Team setup time</string>
    <string name="description">Description</string>
    <string name="tell_us_more_about_your_league">Tell us more about your league</string>
    <string name="tell_us_more_about_your_team">Tell us more about your team</string>
    <string name="create_league">Create league</string>
    <string name="create_team">Create your team</string>
    <string name="update_team">Update team</string>
    <string name="update_league">Update league</string>
    <string name="budget_option">Budget options</string>
    <string name="bottom">Bottom</string>
    <string name="challenge">Challenge</string>
    <string name="dream">Dream</string>
    <string name="league_information">League information</string>
    <string name="teamResponses">Teams</string>
    <string name="invite_friend">Invite friend</string>
    <string name="ranking">Ranking</string>
    <string name="trade_review">Trade review</string>
    <string name="results">Results</string>
    <string name="setup_team">Setup team</string>
    <string name="setup_your_team">Setup your team</string>
    <string name="team_name">Team name</string>
    <string name="max_number_of_team">Max number of teams</string>
    <string name="budget">Budget</string>
    <string name="budget_value">%s (€%s mio)</string>
    <string name="time_per_draft_pick_value">%d seconds</string>
    <string name="start_league">Start League</string>
    <string name="team_setup_time">Team setup time</string>
    <string name="remove">Remove</string>
    <string name="invite_user_in_the_system">Invite users in the system to join</string>
    <string name="invite_social">OR invite friend via social networks</string>
    <string name="invite">Invite</string>
    <string name="invited">Invited</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="remove_team">Remove Team</string>
    <string name="remove_team_message">You are about to remove %s from this League. Are you sure you want to do this?</string>
    <string name="money_prefix">€%s</string>
    <string name="edit">Edit</string>
    <string name="leave">Leave</string>
    <string name="stop_league">Stop League</string>
    <string name="leave_message">You have left the league,  new owner has been chosen.</string>
    <string name="ok">OK</string>
    <string name="choose_a_successor">Choose a successor</string>
    <string name="choose_a_successor_description">You need to select your successor before you leave this league.</string>
    <string name="stop_league_message">This league will be removed from the list of Open Leagues if you decide to stop it. Are you sure to do that?</string>
    <string name="email_input">Enter email address</string>
    <string name="no_data">There is no data for this view.</string>
    <string name="leagues">Leagues</string>
    <string name="seconds">seconds</string>
    <plurals name="minutes">
        <item quantity="one">a minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">an hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">a day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="seconds_">second</string>
    <string name="minutes_">minute</string>
    <string name="hours_">hour</string>
    <string name="days_">day</string>
    <string name="teams">Teams</string>
    <string name="util_team_setup_time">until Team Setup Time</string>
    <string name="util_team_draft_time">until Team Setup Time</string>
    <string name="error_field_must_not_be_empty">@string/field_is_required</string>
    <string name="error_email_address_not_valid">@string/forgot_user_forgot_email_invalid</string>
    <string name="password_is_not_correct">Password is not correct. Please try again.</string>
    <string name="min_password">Your password must be at least 6 characters</string>
    <string name="block_account">This account has been banned</string>
    <string name="must_choose_field">You must choose this field</string>
    <string name="leaving_message">You must specify one member as owner before leaving</string>
    <string name="min_number_team_message">Minimum number of users is not reached</string>
    <string name="no_user_found">No user found</string>
    <string name="team_setup_error">Team Setup Time cannot be edited to be earlier than the original one and must be later than today</string>
    <string name="team_create_complete_message">You must be complete your team creation</string>
    <string name="team_setup_time_close_message">You cannot choose the player because your Team Setup Time is closed</string>
    <string name="enough_player_error">Your team has enough players, you cannot choose this player</string>
    <string name="some_thing_wrong">Something went wrong. Please, try again later…</string>
    <string name="you_are_offline">You are offline</string>
    <string name="no_internet">No Internet connection. Retry connection or try again later.</string>
    <string name="server_not_responding">Server is temporary unavailable, please try again later.</string>
    <string name="server_not_found">Not found, please try again later.</string>
    <string name="forbidden">Forbidden</string>
    <string name="unknown_error">Unknown error</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="not_found_resource">Not found resource!!!!!</string>
    <string name="update_success">Update successful</string>
    <string name="resend_forgot_success">@string/forgot_description_success</string>
    <string name="agreed_error">Please read and agree to the Term and Privacy policy by tapping on the checkbox</string>
    <string name="confirm_not_match">You must enter the same password twice in order to confirm it</string>
    <string name="register_successful">You have successfully registered an account</string>
    <string name="message_confirm_leave_leagues">Are you sure you want to leave this league?</string>
    <string name="message_confirm_complete">Are you sure to complete your team creation?</string>
    <string name="your_team_has_enough_players">your_team_has_enough_players</string>
    <string name="create_your_team">Create your team</string>
    <string name="lineup">Lineup</string>
    <string name="line_up">Line up</string>
    <string name="player_list">Player list</string>
    <string name="team_list">Team list</string>
    <string name="league_details">League details</string>
    <string name="team_details">Team details</string>
    <string name="message_confirm_remove_lineup_player">Do you really want to remove this player out of your lineup?</string>
    <string name="message_logout">Do you really want to log out?</string>
    <string name="message_transferring_player_left_is_0">You can\'t transfer more. Transferring time left is 0</string>
    <string name="message_full_position">No vacancy for this position</string>
    <string name="statistics">Statistics</string>
    <string name="team_creation">Complete team creation</string>
    <string name="team_budget">Budget:</string>
    <string name="team_budget_value">€%s mio</string>
    <string name="my_supper_team">My Super Team</string>
    <string name="points">Points</string>
    <string name="team_line_up">Team Lineup</string>
    <string name="team_squad">Team Squad</string>
    <string name="team_lineup">Team Lineup</string>
    <string name="point_per_player">Point per player</string>
</resources>