<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/padding_layout"
    android:layout_marginRight="@dimen/padding_layout"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding_layout"
    android:paddingRight="@dimen/padding_layout">

    <com.bon.customview.textview.ExtTextView
        android:id="@+id/tvHeader"
        style="@style/StyleTitle"
        android:text="@string/setup_your_team"
        android:textAllCaps="true"
        app:textViewFontAssetName="@string/font_display_black_italic" />

    <com.football.customizes.labels.LabelView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_layout"
        app:labelViewLabel="@string/team_name"
        app:labelViewRequired="true" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/padding_layout"
        android:paddingRight="@dimen/padding_layout">

        <com.football.customizes.edittext_app.EditTextApp
            android:id="@+id/etTeamName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:editTextAppHint="@string/enter_team_name" />

        <com.football.customizes.images.CircleImageViewApp
            android:id="@+id/ivImagePick"
            android:layout_width="@dimen/avatar_normal"
            android:layout_height="@dimen/avatar_normal"
            android:layout_marginLeft="@dimen/padding_layout"
            android:layout_marginStart="@dimen/padding_layout"
            android:padding="@dimen/padding_layout" />
    </TableRow>

    <com.football.customizes.labels.LabelView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_layout"
        android:padding="@dimen/padding_layout"
        app:labelViewInfo="false"
        app:labelViewLabel="@string/description"
        app:labelViewRequired="false" />

    <com.football.customizes.edittext_app.EditTextApp
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_layout"
        android:layout_marginLeft="@dimen/padding_layout"
        android:layout_marginRight="@dimen/padding_layout"
        android:lines="6"
        app:editTextAppHint="@string/tell_us_more_about_your_team" />

    <com.bon.customview.shadowlayout.ShadowLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/padding_layout"
        app:shadowLayoutCornerRadius="@dimen/component_radius"
        app:shadowLayoutDy="@dimen/shadow_layout_dxy_normal"
        app:shadowLayoutShadowColor="@color/color_shadow">

        <com.bon.customview.textview.ExtTextView
            android:id="@+id/tvCreateTeam"
            style="@style/StyleButton"
            android:text="@string/create_team"
            android:textAllCaps="true"
            app:textViewFontAssetName="@string/font_display_black" />
    </com.bon.customview.shadowlayout.ShadowLayout>
</LinearLayout>